src/test/testData/docker/DS003/Dockerfile.denied
FROM alpine:3.13
USER mike
<error descr="Port 22 exposed
Exposing port 22 might allow users to SSH into the container.">EXPOSE 22</error>